@@ -57,3 +57,4 @@ Go To Definition not shown in popup if not available.
 Selecting function def in popup copies def to clipboard.
 Added new icon.
 Code clean.
+Set recursive search for tags (default = 1).
